[package]
authors = ["Walther Chen <walther.chen@gmail.com>"]
name = "acs-explorer"
version = "0.4.0"

[dependencies]
clap = "2.24.2"
error-chain = "0.10.0"
fst = "0.1.38"
json = "0.11.6"
nom = "3.0.0"
reqwest = "0.6.1"
time = "0.1.37"

[dependencies.rusqlite]
#features = ["bundled"]
version = "0.13.0"

